# array

./: LICENSE  README.md  array.hpp  type_traits.hpp
include/feniks/: array.hpp  assert.hpp  iterator.hpp  shared_data.hpp  type_traits.hpp
include/feniks/impl/: assert.hpp  iterator.hpp  shared_data.hpp  types.hpp
test/: CMakeLists.txt  array_tests.cpp  test_array.cpp  test_iterator.cpp  test_member_types.cpp
